--- a/src/Updater/Views/Windows/MainWindow.xaml
+++ b/src/Updater/Views/Windows/MainWindow.xaml
@@ -55,7 +55,7 @@
             Grid.Row="0"
             CloseWindowByDoubleClickOnIcon="True">
             <ui:TitleBar.Icon>
-                <ui:ImageIcon Source="pack://application:,,,/Assets/logo.png" />
+                <ui:ImageIcon Source="pack://application:,,,/Assets/app-light.png" />
             </ui:TitleBar.Icon>
         </ui:TitleBar>
     </Grid>
