--- a/src/Updater/Views/Pages/DashboardPage.xaml
+++ b/src/Updater/Views/Pages/DashboardPage.xaml
@@ -135,13 +135,13 @@
                 VerticalAlignment="Bottom">
                 <ui:TextBlock>1.0.0.0</ui:TextBlock>
                 <ui:TextBlock>1.0.0.0</ui:TextBlock>
-                <ui:TextBlock>.net6.0</ui:TextBlock>
+                <ui:TextBlock Text="{Binding ViewModel.SdkVersion}" />
             </StackPanel>
         </Grid>
 
         <ui:Button
             Width="210"
-            Height="56"
+            Height="70"
             Margin="0,0,20,20"
             HorizontalAlignment="Right"
             VerticalAlignment="Bottom"
