--- a/src/Updater/Views/Pages/ReleasePage.xaml
+++ b/src/Updater/Views/Pages/ReleasePage.xaml
@@ -109,6 +109,13 @@
                 x:Name="CompildProjectComboBox"
                 Margin="10,0"
                 SelectedItem="{Binding ViewModel.CompildProject}" />
+            <Label VerticalAlignment="Center">版本:</Label>
+            <TextBlock
+                Width="55"
+                Margin="10,10"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Text="{Binding ViewModel.CsprojVersion}" />
         </StackPanel>
     </StackPanel>
 </Page>
